# trash101

./: .gitignore  LICENSE  pyproject.toml  readme.md
trash101/: __init__.py  putback.py  trash.py
