[tool.poetry]
name = "trash101"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
trash = "trash101.trash:main"
putback = "trash101.putback:main"

[tool.poetry.dependencies]
python = "^3.5"
xattr = "^0.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
